@@ -41,10 +41,25 @@ public class EloController {
                 .orElse(ResponseEntity.notFound().build());
     }
 
+    // elo_history carries no variant of its own — it is a property of the game
+    // the entry came from, so it is joined in from games.variant (as the
+    // Chess960 design anticipated). Without it the two rating tracks are
+    // indistinguishable in one list, and elo_after jumps between them.
+    private static final String ELO_HISTORY_SQL = """
+            SELECT h.game_id, h.elo_after, h.delta, g.variant, h.recorded_at
+            FROM elo_history h
+            JOIN games g ON g.id = h.game_id
+            WHERE h.user_id = ?
+              AND (CAST(? AS TEXT) IS NULL OR g.variant = ?)
+            ORDER BY h.recorded_at DESC
+            LIMIT ?
+            """;
+
     @GetMapping("/{username:.+}/elo-history")
     public ResponseEntity<Object> getEloHistory(
             @PathVariable String username,
             @RequestParam(defaultValue = "50") int limit,
+            @RequestParam(required = false) String variant,
             HttpServletRequest request) {
         if (!isAuthorised(username, request)) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
@@ -53,15 +68,18 @@ public class EloController {
         if (userId == null) {
             return ResponseEntity.notFound().build();
         }
-        int safeLimit = Math.max(1, Math.min(limit, MAX_HISTORY_LIMIT));
-        List<EloHistoryEntryDto> history = jdbcTemplate.query(
-                "SELECT game_id, elo_after, delta, recorded_at FROM elo_history WHERE user_id = ? ORDER BY recorded_at DESC LIMIT ?",
+        int safeLimit = Math.clamp(limit, 1, MAX_HISTORY_LIMIT);
+        // variant absent → both tracks; "STANDARD"/"CHESS960" → only that one.
+        String variantFilter = "STANDARD".equals(variant) || "CHESS960".equals(variant) ? variant : null;
+
+        List<EloHistoryEntryDto> history = jdbcTemplate.query(ELO_HISTORY_SQL,
                 (rs, i) -> new EloHistoryEntryDto(
                         rs.getLong("game_id"),
                         rs.getInt("elo_after"),
                         rs.getInt("delta"),
+                        rs.getString("variant"),
                         rs.getObject("recorded_at", java.time.OffsetDateTime.class)),
-                userId, safeLimit);
+                userId, variantFilter, variantFilter, safeLimit);
         return ResponseEntity.ok(history);
     }
 
